feat: display desoc badges in user-card-before-badges outlet, cache badges under a user.id key

--- a/assets/javascripts/discourse/templates/components/badges-grid.hbs
+++ b/assets/javascripts/discourse/templates/components/badges-grid.hbs
@@ -3,10 +3,9 @@
     <div class="desoc-group-list">
       {{#each credentials as |credential|}}
         <a href={{credential.metadata.external_link}} target="_blank" rel="noreferrer">
-          <img src={{credential.metadata.badge}} class="desoc-badge" alt={{meta.name}} />
+          <img src={{credential.metadata.image}} class="desoc-badge" alt={{meta.name}} />
         </a>
       {{/each}}
     </div>
   {{/if}}
-
 </div>
