fix: badges alignment issue on profile page

--- a/assets/javascripts/discourse/templates/components/desoc-badges.hbs
+++ b/assets/javascripts/discourse/templates/components/desoc-badges.hbs
@@ -1,4 +1,4 @@
-<div class="desoc-container badges-grid">
+<div class="desoc-container">
   {{#if credentials}}
     <div class="desoc-group-list">
       {{#each credentials as |credential|}}
