--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -28,3 +28,9 @@
   height: 45px;
   object-fit: cover;
 }
+
+.desoc-badges-item {
+  background-color: transparent;
+  box-shadow: none;
+  border: none;
+}
