Implement UserSerializer patch to override include_associated_accounts method

--- a/assets/javascripts/discourse/templates/modal/show-badge.hbs
+++ b/assets/javascripts/discourse/templates/modal/show-badge.hbs
@@ -9,8 +9,8 @@
       <img src={{this.badge.metadata.image}} class="badge-image" />
       
       <div class="links">
-        <a class="link" href={{this.badge.desocLink}} alt="credential website" target="_blank" rel="noopener">
-          View Credential
+        <a class="link" href={{this.badge.desocLink}} alt="Attestation website" target="_blank" rel="noopener">
+          View Attestation
         </a>
         <a class="link" href={{this.badge.metadata.external_link}} alt="credential website" target="_blank" rel="noopener">
           View Website
