--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -135,12 +135,12 @@ $avatar_margin: 0;
 
     a.link {
       display: flex;
+      gap: 5px;
       padding: 5px 15px;
       background-color: var(--primary-low);
       color: var(--primary-very-high);
 
       svg {
-        margin-left: 5px;
         width: 20;
         height: 20;
 
