--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -102,7 +102,7 @@ $avatar_margin: 0;
     // margin-bottom: 0.5rem;
 
     .badge-name {
-      margin: .5rem 0 5px 0;
+      margin: 0.5rem 0 5px 0;
     }
     .badge-type {
       margin-bottom: 2px;
@@ -118,11 +118,19 @@ $avatar_margin: 0;
       word-wrap: break-word;
     }
 
-    .badge-image {
-      width: 95px;
-      height: 95px;
+    .badge-image--wrapper {
+      min-width: 95px;
+      min-height: 95px;
       border-radius: 50%;
       margin: 10px 0;
+
+      .badge-image {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+        object-position: center;
+      }
     }
   }
 
