--- a/assets/javascripts/discourse/templates/modal/show-badge.hbs
+++ b/assets/javascripts/discourse/templates/modal/show-badge.hbs
@@ -3,15 +3,15 @@
     <div class="badge-details-container">
       <div class="badge-details-content">
         <div class="badge-image--wrapper">
-          <img src={{this.badge.metadata.image}} class="badge-image" />
+          <img src={{this.badge.attestation.metadata.image}} class="badge-image" />
         </div>
         <div>
-          <h2 class="badge-name">{{this.badge.metadata.name}}</h2>
+          <h2 class="badge-name">{{this.badge.attestation.metadata.name}}</h2>
           <span class="badge-type">
             <b>{{this.attestationType}}</b></span>
           <span class="badge-description">{{if
               this.badge
-              this.badge.metadata.description
+              this.badge.attestation.metadata.description
             }}</span>
         </div>
       </div>
@@ -45,7 +45,7 @@
         </a>
         <a
           class="link"
-          href={{this.badge.metadata.external_link}}
+          href={{this.badge.attestation.metadata.external_link}}
           alt="credential website"
           target="_blank"
           rel="noopener"
